src/objects/TRAK_Decision_Question__c.object
<CustomObject>
    <description>Business Description: This object is used as a Decisions and Questions log. You can raise Questions and track these through to decisions. These can be linked to associated meetings, user stories and more.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who needs to take action over this question/decision</description>
        <inlineHelpText>The person who needs to take action over this question/decision</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Decisions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect</label>
        <referenceTo>TRAK_Bug__c</referenceTo>
        <relationshipLabel>Decisions &amp; Questions</relationshipLabel>
        <relationshipName>TRAK_Decisions_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision or Question</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design</label>
        <referenceTo>TRAK_Design__c</referenceTo>
        <relationshipLabel>Decisions &amp; Questions</relationshipLabel>
        <relationshipName>TRAK_Decisions_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Further question details</description>
        <inlineHelpText>Further question details</inlineHelpText>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>TRAK_Meeting__c</referenceTo>
        <relationshipName>Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>TRAK_User_Story__c</referenceTo>
        <relationshipLabel>Decisions &amp; Questions</relationshipLabel>
        <relationshipName>TRAK_Decisions_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risks_Issues__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risks &amp; Issues</label>
        <referenceTo>TRAK_Risks_Issues__c</referenceTo>
        <relationshipLabel>Decisions &amp; Questions</relationshipLabel>
        <relationshipName>Decisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IF(LEN(TRIM(Bug__c &amp;  Requirement__c &amp;  Design__c &amp; Risks_Issues__c &amp;  Test_Result__c )) &gt; 18, &quot;Multiple&quot;, HYPERLINK(&quot;/&quot;&amp;TRIM(Bug__c &amp;  Requirement__c  &amp;  Design__c &amp;   Risks_Issues__c &amp;  Test_Result__c ), TRIM(Bug__r.Name &amp; Requirement__r.Name  &amp;  Design__r.Name &amp;   Risks_Issues__r.Name &amp;  Test_Result__r.Name)))</formula>
        <inlineHelpText>The source of this particular question or decision as listed in Relationships</inlineHelpText>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question Raised</fullName>
                </value>
                <value>
                    <fullName>Question Answered</fullName>
                </value>
                <value>
                    <fullName>Decision Made</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>In Discussion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Result</label>
        <referenceTo>TRAK_Test__c</referenceTo>
        <relationshipLabel>Decisions &amp; Questions</relationshipLabel>
        <relationshipName>TRAK_Decisions_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Decision &amp; Question</label>
    <listViews>
        <fullName>Answered</fullName>
        <columns>NAME</columns>
        <columns>Decision__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>Source__c</columns>
        <columns>Assigned__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Question Answered</value>
        </filters>
        <label>3) Questions Answered</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DecMade</fullName>
        <columns>NAME</columns>
        <columns>Details__c</columns>
        <columns>Decision__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>Source__c</columns>
        <columns>Assigned__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Decision Made</value>
        </filters>
        <label>1) Decisions Made</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mine</fullName>
        <columns>NAME</columns>
        <columns>Decision__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>Source__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>0) My Questions</label>
    </listViews>
    <listViews>
        <fullName>Raised</fullName>
        <columns>NAME</columns>
        <columns>Details__c</columns>
        <columns>Decision__c</columns>
        <columns>Next_Steps__c</columns>
        <columns>Source__c</columns>
        <columns>Assigned__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Question Raised</value>
        </filters>
        <label>2) Questions Raised</label>
    </listViews>
    <nameField>
        <displayFormat>QD-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decisions &amp; Questions</pluralLabel>
    <recordTypes>
        <fullName>Decision</fullName>
        <active>true</active>
        <description>To store decisions made</description>
        <label>Decision</label>
    </recordTypes>
    <recordTypes>
        <fullName>Question</fullName>
        <active>true</active>
        <description>To raise questions &amp; collect answers</description>
        <label>Question</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>